# Nozom1LLama

./: .clang-format  .gitignore  Buffer详解-Model与Base的区别.md  CMakeLists.txt  CMakePresets.json  Makefile  Model模块学习指南.md  PROJECT_STATUS.md  README.md  RMSNorm索引说明.md  build.sh  compile_commands.json  llama2.md  readme.md  run_tests.sh  简历项目描述.md
cmake/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  compile_commands.json  cuda.cmake
cmake/CPM_modules/: FindArmadillo.cmake  FindGTest.cmake  Findabseil-cpp.cmake  Findglog.cmake  Findnlohmann_json.cmake  Findre2.cmake  Findsentencepiece.cmake
cmake/demo/: Makefile  llama_infer
cmake/test/: Makefile  test_llm
demo/: CMakeLists.txt  Makefile  llama_infer  main.cpp
docs/: MHA架构分析.md  draw_01_整体架构图.md  draw_02_数据流转图.md  draw_03_MHA流程图.md  draw_04_Layer层次结构图.md  draw_05_KVCache管理图.md  draw_06_CUDA执行流程图.md  draw_07_模型初始化流程图.md  draw_08_Tensor系统图.md  draw_09_推理生成流程图.md  fill_input函数详解.md  llama2_vs_llama3_inference.md  memory.md  model_cmp.md  模型对比.md  记录.md
kuiper/include/base/: base.h  data_type.h  tiktoken.h  unicode.h
kuiper/include/op/: encode.h  layer.h  matmul.h  mha.h
kuiper/source/base/: alloc.cpp  base.cpp  data_type.cpp  data_type.cu
kuiper/source/op/: add.cpp  matmul.cpp
kuiper/source/op/kernels/: kernels_interface.h  kernels_interfaces.cpp
kuiper/source/op/kernels/cpu/: matmul_kernel.cpp  matmul_kernel.h
kuiper/source/op/kernels/cuda/: matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  rope_kernel.cu
kuiper/source/tensor/: tensor.cpp
models/llama2_7b/llama2/: data.csv
nozom1/include/base/: alloc.h  base.h  buffer.h  cuda_config.h  tick.h  tiktoken.h  unicode-data.h  unicode.h
nozom1/include/op/: add.h  embedding.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h  swiglu.h
nozom1/include/tensor/: tensor.h
nozom1/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  buffer.cpp  unicode.cpp
nozom1/source/op/: add.cpp  embedding.cpp  layer.cpp  matmul.cpp  mha.cpp  rmsnorm.cpp  rope.cpp  swiglu.cpp
nozom1/source/op/kernels/: kernels_interfaces.cpp  kernels_interfaces.h
nozom1/source/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  embedding_kernel.cuh  embeddingg_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope.cu  rope.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
nozom1/source/tensor/: tensor.cpp
test/: CMakeLists.txt  Makefile  test_llm
test/test_op/: test_cu_matmul_fp16.cpp
test/test_tensor/: test_fp16.cpp
tests/: README.md
tests/test_base/: test_allocator.cpp  test_buffer.cpp  test_datatype.cpp  test_status.cpp
tests/test_op/: test_add.cpp  test_argmax.cpp  test_embedding.cpp  test_matmul.cpp  test_mha.cpp  test_rmsnorm.cpp  test_rope.cpp  test_swiglu.cpp
tests/test_tensor/: test_tensor.cpp
tmp/: todo-free-format.cpp
