
add_executable(llama_infer main.cpp)
target_link_directories(llama_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries(llama_infer llama)
if (LLAMA3_SUPPORT)
    message(STATUS "LINK LLAMA3 SUPPORT")
    # absl is already loaded via CPM in main CMakeLists.txt, skip find_package
    if(NOT TARGET absl::base)
        find_package(absl REQUIRED)
    endif()
    find_package(nlohmann_json REQUIRED)
    if(TARGET re2)
        target_link_libraries(llama_infer absl::base re2 nlohmann_json::nlohmann_json)
    else()
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(RE2 REQUIRED re2)
        target_include_directories(llama_infer PUBLIC ${RE2_INCLUDE_DIRS})
        target_link_libraries(llama_infer absl::base ${RE2_LIBRARIES} nlohmann_json::nlohmann_json)
    endif()
endif ()
set_target_properties(llama_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

if (QWEN2_SUPPORT)
    message(STATUS "LINK QWEN2 SUPPORT")
    add_executable(qwen_infer main_qwen.cpp)
    target_link_directories(qwen_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    if(NOT TARGET absl::base)
        find_package(absl REQUIRED)
    endif()
    find_package(nlohmann_json REQUIRED)
    if(TARGET re2)
        target_link_libraries(qwen_infer llama)
        target_link_libraries(qwen_infer absl::base re2 nlohmann_json::nlohmann_json)
    else()
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(RE2_QWEN REQUIRED re2)
        target_include_directories(qwen_infer PUBLIC ${RE2_QWEN_INCLUDE_DIRS})
        target_link_libraries(qwen_infer llama)
        target_link_libraries(qwen_infer absl::base ${RE2_QWEN_LIBRARIES} nlohmann_json::nlohmann_json)
    endif()
    set_target_properties(qwen_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
elseif (QWEN3_SUPPORT)
    message(STATUS "LINK QWEN3 SUPPORT")
    add_executable(qwen3_infer main_qwen3.cpp)
    target_link_directories(qwen3_infer PUBLIC ${PROJECT_SOURCE_DIR}/lib)
    if(NOT TARGET absl::base)
        find_package(absl REQUIRED)
    endif()
    find_package(nlohmann_json REQUIRED)
    if(TARGET re2)
        target_link_libraries(qwen3_infer llama)
        target_link_libraries(qwen3_infer absl::base re2 nlohmann_json::nlohmann_json)
    else()
        find_package(PkgConfig REQUIRED)
        pkg_check_modules(RE2_QWEN3 REQUIRED re2)
        target_include_directories(qwen3_infer PUBLIC ${RE2_QWEN3_INCLUDE_DIRS})
        target_link_libraries(qwen3_infer llama)
        target_link_libraries(qwen3_infer absl::base ${RE2_QWEN3_LIBRARIES} nlohmann_json::nlohmann_json)
    endif()
    set_target_properties(qwen3_infer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
endif ()